Add tier-1 API and UI test coverage with Playwright session auth.
Extend the framework for production and tech map functional tests, remote dev config, SSH DB tunnel, UI page objects, and TCM reporting integration.

Co-authored-by: Cursor <cursoragent@cursor.com>